--- a/css.css
+++ b/css.css
@@ -80,19 +80,18 @@ h1 {
   text-align: start;
 }
 
-.task a {
-  /* line-height: 20px; */
+.task button {
   font-size: 16px;
-  width: 20px;
   text-align: center;
   display: block;
   padding: 5px;
   color: tomato;
+  background-color: white;
   /* border: solid 1px rgb(255, 255, 255);
   border-radius: 8px;*/
 }
 
-.task a:hover {
+.task button:hover {
   /* border: solid 1px red; */
   border-radius: 8px;
   background-color: tomato;
